# mcp-server-startos

./: FOR-JEFF.md  LICENSE  README.md  pyproject.toml
src/mcp_server_startos/: app.py  cli.py  composite.py  server.py  version.py
tests/: conftest.py  test_action_run.py  test_cli.py  test_composite.py  test_lifecycle_verify.py
tests/fixtures/: package_list.json  package_stats.json  server_device_info.json  server_metrics.json
